--- a/app/templates/header-zoom.hbs
+++ b/app/templates/header-zoom.hbs
@@ -3,7 +3,7 @@
 </a>
 <span class="date">{{formatDate item.date labels.dateFormat}}</span>
 <span class="description">
-{{#if item.description}} : {{item.description}} {{else}}
+{{#if item.description}}&nbsp;: {{item.description}} {{else}}
     {{#if admin}} : {{labels.addDescription}} {{/if}}
 {{/if}}
 </span>
