--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -19,6 +19,6 @@
 </div>
 <div class="commentBar">
     <h4>{{labels.comments}}</h4>
-    <div class="row-fluid commentForm"></div>
-    <div class="row-fluid comments"></div>
+    <div class="commentForm"></div>
+    <div class="comments"></div>
 </div>
