Fix: removed bootstrap from comment item

--- a/app/templates/header-edit.hbs
+++ b/app/templates/header-edit.hbs
@@ -1,10 +1,10 @@
-<div class="navbar-inner">
-    <a href="/" class="brand">
-        <img src="/img/logo_m.png" alt="Logo" />
-    </a>
-    <span class="date">{{formatDate item.date labels.dateFormat}}</span> :
-    <input type="text" name="description" value="{{item.description}}" placeholder="{{labels.enterDescription}}" />
-    <span class="delete" style="display: inline;">
-        {{labels.deletePicture}}
-    </span>
-</div>
+<a href="/" class="brand">
+    <img src="/img/logo_m.png" alt="Logo"/>
+</a>
+<span class="date">{{formatDate item.date labels.dateFormat}}</span> :
+{{#if admin}}
+<input type="text" name="description" value="{{item.description}}" placeholder="{{labels.enterDescription}}" />
+<span class="delete">{{labels.deletePicture}}</span>
+{{else}}
+    <span class="description">{{item.description}}</span>
+{{/if}}
