--- a/app/templates/header-zoom.hbs
+++ b/app/templates/header-zoom.hbs
@@ -8,7 +8,5 @@
 {{/if}}
 </span>
 {{#if admin}}
-<span class="delete" style="display: inline;">
-    {{labels.deletePicture}}
-</span>
+<span class="delete">{{labels.deletePicture}}</span>
 {{/if}}
