--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -17,8 +17,8 @@
     </iframe>
 {{/if}}
 </div>
-<div class="commentBar">
+<div class="comment-bar">
     <h4>{{labels.comments}}</h4>
-    <div class="commentForm"></div>
+    <form class="comment-form"></form>
     <div class="comments"></div>
 </div>
