--- a/app/css/main.css
+++ b/app/css/main.css
@@ -22,6 +22,12 @@
     font-style: normal;
 }
 
+*, *:before, *:after {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
 body {
     background-color: #f9f9f9;
     font-family: 'SansationRegular', sans-serif;
@@ -78,9 +84,9 @@ button.icon:active {
 
 .headbar .delete {
     cursor: pointer;
-    display: none;
-    line-height: 40px;
-    margin-right: 10px;
+    line-height: 34px;
+    position: absolute;
+    right: 1rem;
 }
 
 .headbar .info {
@@ -164,7 +170,6 @@ button.icon:active {
 
 .column .item .date, .column .item .description, .column .item .nb-comments {
     background: rgba(0, 0, 0, 0.5);
-    bottom: 0;
     color: #ffffff;
     font-size: large;
     margin: 0;
@@ -178,8 +183,11 @@ button.icon:active {
     visibility: visible;
 }
 
+.column .item .description {
+    bottom: 4px;
+    line-height: 1.5rem;
+}
 .column .item .date {
-    bottom: auto;
     font-size: medium;
     padding: 4px 5px;
     text-align: center;
@@ -197,96 +205,6 @@ button.icon:active {
     top: 0;
     width: auto;
     z-index: 2;
-}
-
-.commentBar {
-    -moz-box-shadow: 1px 1px 5px #999;
-    -webkit-box-shadow: 1px 1px 5px #999;
-    background-color: gray;
-    box-shadow: 1px 1px 5px #999;
-    text-align: center;
-    color: #fff;
-    width: 20%;
-}
-
-.commentBar h4 {
-    line-height: 2rem;
-    margin: 0;
-    padding-left: 0.5rem;
-    padding-top: 0.2rem;
-    text-align: left;
-}
-
-.row-fluid .span3.commentBar {
-    margin-left: 0.7%;
-}
-
-.comment {
-    background-color: #FFFFFF;
-    float: left;
-    font-size: medium;
-    color: #111;
-    margin: 10px 5px 5px 10px;
-    overflow: hidden;
-    padding: 6px;
-    text-align: left;
-    -moz-box-shadow: 0 0 2px 2px #FFF;
-    -webkit-box-shadow: 0 0 2px 2px #FFF;
-    box-shadow: 0 0 2px 2px #FFF;
-}
-
-.row-fluid .span10.comment {
-    margin-bottom: 3%;
-    margin-left: 3%;
-    width: 94%;
-}
-
-.comment > * {
-    clear: both;
-    float: left;
-    margin: 0;
-}
-.comment .author {
-    border-bottom: 2px solid grey;
-    font-size: large;
-    font-weight: bold;
-    width: 100%;
-}
-.comment .date {
-    float: right;
-    font-size: x-small;
-    font-weight: normal;
-    line-height: 15px;
-    padding-bottom: 10px;
-}
-.comment .delete {
-    cursor: pointer;
-    display: none;
-    margin-top: -3px;
-    position: absolute;
-    right: 23px;
-}
-
-.commentForm {
-    padding: 0.4rem;
-}
-.commentForm .masked {
-    display: none;
-}
-.commentForm form {
-    margin-bottom: 5px;
-}
-.commentForm input, .commentForm textarea {
-    width: 92%;
-}
-.commentForm form .btn {
-    margin-top: 0.5rem;
-}
-.commentForm .btn-success {
-    background-color: #85C100;
-}
-.commentForm .help-inline {
-    color: yellow;
 }
 
 .zoom {
@@ -379,7 +297,7 @@ form input[type='text'], form input[type='email'], form input[type='password'], 
     font-size: 14px;
     height: 20px;
     min-width: 15rem;
-    padding: 4px 6px;
+    padding: 1rem 0.5rem;
     -webkit-transition: border linear .2s,box-shadow linear .2s;
     -moz-transition: border linear .2s,box-shadow linear .2s;
     transition: border linear .2s,box-shadow linear .2s;
@@ -391,7 +309,7 @@ form textarea {
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     color: #555;
     font-size: 14px;
-    padding: 4px 6px;
+    padding: 0.5rem;
 }
 
 
@@ -508,7 +426,7 @@ form.pictures {
         flex-wrap: wrap;
     }
 
-    .zoom .picture, .zoom .commentBar {
+    .zoom .picture {
         width: 100%;
     }
 }
@@ -531,11 +449,7 @@ form.pictures {
         display: none;
     }
 
-    .picture, .commentBar {
+    .picture {
         width: 98%;
-    }
-
-    .commentBar {
-        margin-top: 10px;
     }
 }
