--- a/app/css/main.css
+++ b/app/css/main.css
@@ -58,17 +58,46 @@ button.icon:active {
     color: #0c7b10;
 }
 
-.headbar {
-    align-items: center;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
-    display: flex;
-    height: 35px;
-    justify-content: space-between;
-    margin-bottom: 0.3rem;
+header {
+    perspective: 99999px;
+    perspective-origin: top;
 }
 
-.headbar.zoom {
+.headbar {
+    box-shadow: 0 1px 8px rgba(0, 0, 0, .3);
+    height: 2.2rem;
+    margin-bottom: 0.3rem;
+    perspective: 99999px;
+    perspective-origin: top;
+    transform-style: preserve-3d;
+    transition: transform 0.6s ease-in-out;
+}
+.headbar.login {
+    transform: rotateX(-90deg);
+}
+
+.headbar .side {
+    align-items: center;
+    backface-visibility:hidden;
+    background-color: white;
+    display: flex;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.headbar .front {
+    justify-content: space-between;
+    transform: translateZ(1.1rem);
+}
+
+.headbar.zoom .front {
     justify-content: flex-start;
+}
+
+.headbar .back {
+    transform: rotateX(90deg) translateZ(1.1rem);
+    justify-content: center;
 }
 
 .headbar .brand {
@@ -118,6 +147,11 @@ button.icon:active {
     flex-direction: row;
 }
 
+.headbar .btn {
+    height: 1.5rem;
+    line-height: 1.5rem;
+}
+
 .btn {
     background-color: #9e9e9e;
     border: none;
@@ -131,6 +165,10 @@ button.icon:active {
     outline: 0;
     padding: 0 1rem;
     text-align: center;
+}
+
+.btn.primary {
+    background-color: #3189c1;
 }
 
 .grid {
@@ -269,8 +307,7 @@ form {
 
 form.horizontal {
     display: flex;
-    flex-direction: column;
-    width: 100%;
+    flex-direction: row;
 }
 
 form .form-field {
@@ -278,14 +315,12 @@ form .form-field {
     display: flex;
     flex-direction: row;
     line-height: 1rem;
-    margin-bottom: 0.5rem;
+    margin-right: 1rem;
     padding: 0.3rem;
 }
 
 form .form-field-label {
     margin-right: 1rem;
-    text-align: right;
-    width: 10rem;
 }
 
 form input[type='text'], form input[type='email'], form input[type='password'], form input[type='url'], form input[type='date'] {
@@ -296,7 +331,7 @@ form input[type='text'], form input[type='email'], form input[type='password'], 
     color: #555;
     font-size: 14px;
     height: 20px;
-    padding: 1rem 0.5rem;
+    padding: 0.8rem 0.5rem;
     -webkit-transition: border linear .2s,box-shadow linear .2s;
     -moz-transition: border linear .2s,box-shadow linear .2s;
     transition: border linear .2s,box-shadow linear .2s;
