Add: max size to 2048px

--- a/app/templates/picture.hbs
+++ b/app/templates/picture.hbs
@@ -3,7 +3,8 @@
      srcset="/pictures/{{model.filename}}-320.{{model.extension}} 320w,
              /pictures/{{model.filename}}-640.{{model.extension}} 640w,
              /pictures/{{model.filename}}-1024.{{model.extension}} 1024w,
-             /pictures/{{model.file}} 1600w"
+             /pictures/{{model.filename}}-1600.{{model.extension}} 1600w,
+             /pictures/{{model.file}} 2048w"
      sizes="(max-width: 160px) 99vw, (max-width: 320px) 50vw, 33.33vw" />
 {{#if model.date}}
     <span class="date">{{formatDate model.date labels.dateFormat}}</span>
