--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -4,7 +4,8 @@
          srcset="/pictures/{{model.filename}}-320.{{model.extension}} 320w,
                  /pictures/{{model.filename}}-640.{{model.extension}} 640w,
                  /pictures/{{model.filename}}-1024.{{model.extension}} 1024w,
-                 /pictures/{{model.file}} 1600w"
+                 /pictures/{{model.filename}}-1024.{{model.extension}} 1600w,
+                 /pictures/{{model.file}} 2048w"
          sizes="75vw" />
 {{else}}
     {{#if dailymotion}}
