Fix: resize pictures with only a fixed width

--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -1,10 +1,10 @@
 <div class="picture">
 {{#if picture}}
     <img src="/pictures/{{model.file}}" alt=""
-         srcset="/pictures/{{model.filename}}-320.{{model.extension}} 320w,
-                 /pictures/{{model.filename}}-640.{{model.extension}} 640w,
-                 /pictures/{{model.filename}}-1024.{{model.extension}} 1024w,
-                 /pictures/{{model.filename}}-1600.{{model.extension}} 1600w,
+         srcset="/pictures/{{model.filename}}--320.{{model.extension}} 320w,
+                 /pictures/{{model.filename}}--640.{{model.extension}} 640w,
+                 /pictures/{{model.filename}}--1024.{{model.extension}} 1024w,
+                 /pictures/{{model.filename}}--1600.{{model.extension}} 1600w,
                  /pictures/{{model.file}} 2048w"
          sizes="75vw" />
 {{else}}
