--- a/app/templates/picture.hbs
+++ b/app/templates/picture.hbs
@@ -1,9 +1,9 @@
-<img src="/pictures/{{model.filename}}-640.{{model.extension}}"
+<img src="/pictures/{{model.filename}}--640.{{model.extension}}"
      alt="{{model.filename}}" id="{{model.id}}" class="wall"
-     srcset="/pictures/{{model.filename}}-320.{{model.extension}} 320w,
-             /pictures/{{model.filename}}-640.{{model.extension}} 640w,
-             /pictures/{{model.filename}}-1024.{{model.extension}} 1024w,
-             /pictures/{{model.filename}}-1600.{{model.extension}} 1600w,
+     srcset="/pictures/{{model.filename}}--320.{{model.extension}} 320w,
+             /pictures/{{model.filename}}--640.{{model.extension}} 640w,
+             /pictures/{{model.filename}}--1024.{{model.extension}} 1024w,
+             /pictures/{{model.filename}}--1600.{{model.extension}} 1600w,
              /pictures/{{model.file}} 2048w"
      sizes="(max-width: 160px) 99vw, (max-width: 320px) 50vw, 33.33vw" />
 {{#if model.date}}
