--- a/app/templates/filter-text.hbs
+++ b/app/templates/filter-text.hbs
@@ -1,2 +1,2 @@
 <span class="text">{{value}}</span>
-{{#if clear}}<i class="icon-remove-sign" />{{/if}}
+{{#if clear}}<i class="icon-clear" />{{/if}}
