--- a/app/css/main.css
+++ b/app/css/main.css
@@ -61,6 +61,9 @@ button.icon:active {
 header {
     perspective: 99999px;
     perspective-origin: top;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
 
 .headbar {
@@ -169,6 +172,10 @@ header {
 
 .btn.primary {
     background-color: #3189c1;
+}
+
+#main {
+    padding-top: 2.4rem;
 }
 
 .grid {
@@ -369,57 +376,70 @@ form.pictures {
     font-style: italic;
     height: 28px;
     line-height: 28px;
-    padding: 0 25px;
+    padding: 0 1rem;
     text-align: center;
     z-index: 10;
 }
 
 .filter.expanded {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     height: auto;
-    transform: translateY(110px);
-}
-
-.filter i {
-    position: relative;
-    top: 1px;
-    left: 17px;
-}
-
-.filter div.column {
-    cursor: default;
-    float: left;
-    padding: 10px 20px;
+    justify-content: space-around;
+    left: 0;
+    margin: 0 45%;
+    min-width: 360px;
+    padding: 0.5rem;
+    position: absolute;
+    top: 0;
     width: auto;
 }
-.filter div.column.month {
-    width: 200px;
+
+.filter .icon-clear {
+    font-size: 1.2rem;
+    left: 10px;
+    position: relative;
+    top: 1px;
 }
-.filter div.column span {
+
+.filter-selection {
+    display: flex;
+    flex-direction: column;
+}
+
+.filter-selection .column {
+    cursor: default;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 1rem;
+    width: 100%;
+}
+.filter-selection .column span {
     background-color: #ffffff;
     border-radius: 5px;
     color: #000000;
     cursor: pointer;
-    float: left;
     font-style: normal;
     margin: 5px;
     padding: 0 5px;
 }
-.filter div.column.year span {
-    clear: both;
+.filter-selection .column.year span {
 }
-.filter div.column span.selected {
+.filter-selection .column .selected {
     background-color: lightgreen;
 }
-.filter div.column.month span.selected {
+.filter-selection .column.month .selected {
     background-color: powderblue;
 }
 
-.filter button {
-    margin-bottom: 10px;
+.filter-selection-button {
+    width: 120px;
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .click-overlay {
@@ -466,7 +486,7 @@ form.pictures {
 }
 
 @media (max-width: 620px) {
-    .headbar {
+    header {
         position: relative;
     }
 
@@ -481,6 +501,10 @@ form.pictures {
 
     .headbar .info {
         display: none;
+    }
+
+    #main {
+        padding-top: 0;
     }
 
     .picture {
