--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -1,6 +1,8 @@
 .modal {
     background: rgba(0, 0, 0, 0.8);
     bottom: 0;
+    display: flex;
+    height: 100vh;
     left: 0;
     opacity: 0;
     position: fixed;
@@ -9,19 +11,27 @@
     -moz-transition: opacity 250ms ease-in;
     transition: opacity 250ms ease-in;
     top: 0;
+    width: 100vw;
     z-index: 99999;
 }
 
 .modal > div {
     background: #fff;
     border-radius: 0.5rem;
-    margin: 10% auto;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
     max-width: 600px;
     padding: 0;
     position: relative;
     -moz-transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
+}
+
+.large.modal > div {
+    max-height: 94vh;
+    max-width: 92vw;
 }
 
 .modal section, .modal header, .modal footer {
@@ -33,6 +43,8 @@
 .modal header {
     border-radius: 0.5rem 0.5rem 0 0;
     border-bottom: 1px solid #eee;
+    flex-shrink: 0;
+    height: 3rem;
     justify-content: space-between;
 }
 
@@ -47,12 +59,15 @@
 }
 
 .modal section {
-    padding: 1rem 2rem 2rem;
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 1rem;
 }
 
 .modal footer {
     background-color: #f5f5f5;
     border-radius: 0 0 0.5rem 0.5rem;
     border-top: 1px solid #ddd;
+    flex-shrink: 0;
     justify-content: flex-end;
 }
