--- a/app/templates/header-zoom.hbs
+++ b/app/templates/header-zoom.hbs
@@ -2,6 +2,7 @@
     <img src="/img/logo_m.png" alt="Logo" />
 </a>
 <span class="date">{{formatDate item.date labels.dateFormat}}</span>
+<span class="date short">{{formatDate item.date labels.shortDateFormat}}</span>
 <span class="description">
 {{#if item.description}}&nbsp;: {{item.description}} {{else}}
     {{#if admin}} : {{labels.addDescription}} {{/if}}
