--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -4,7 +4,7 @@
     </a>
     <div class="filter">Filtrer...</div>
     <div class="extra">
-        <p class="info">{{#unlessequals nbItems 0}}{{nbItems}} {{labels.picturesToComment}}{{/unlessequals}}</p>
+        <p class="info">{{#[unlessequals] nbItems 0}}{{nbItems}} {{labels.picturesToComment}}{{/[unlessequals]}}</p>
         <button class="icon" id="add-item" title="Ajout de photos"><i class="icon-plus"></i></button>
     </div>
 </div>
