--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -17,7 +17,7 @@
     <span class="date">{{formatDate model.date labels.dateFormat}}</span>
 {{/if}}
 {{#if model.comments}}
-    <span class="nb-comments">{{model.comments.length}} <i class="icon-comment"></i></span>
+    <span class="nb-comments">{{comments.length}} <i class="icon-comment"></i></span>
 {{/if}}
 {{#if model.description}}
     <span class="description">{{model.description}}</span>
