--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -1,12 +1,12 @@
 <div class="click-overlay" style="width:{{width}}px;height:{{height}}px;"></div>
 {{#if dailymotion}}
     <iframe src="//www.dailymotion.com/embed/video/{{videoId}}?html=1&info=0&logo=0&related=0&chromeless=1"
-{{/if}}
-{{#if youtube}}
+{{else if youtube}}
     <iframe id="ytplayer" type="text/html" src="http://www.youtube.com/embed/{{videoId}}?autoplay=0&showinfo=0&playsinline=1&fs=0&rel=0&theme=light"
-{{/if}}
-{{#if vimeo}}
+{{else if vimeo}}
     <iframe src="//player.vimeo.com/video/{{videoId}}?title=0&chromeless=1&badge=0"
+{{else}}
+    <iframe src="/pictures/empty.jpg"
 {{/if}}
         width="{{width}}"
         height="{{height}}"
