--- a/app/templates/picture.hbs
+++ b/app/templates/picture.hbs
@@ -5,7 +5,7 @@
              /pictures/{{model.filename}}--1024.{{model.extension}} 1024w,
              /pictures/{{model.filename}}--1600.{{model.extension}} 1600w,
              /pictures/{{model.file}} 2048w"
-     sizes="(max-width: 160px) 99vw, (max-width: 320px) 50vw, 33.33vw" height="{{model.height}}" width="{{model.width}}" />
+     sizes="(max-width: 160px) 99vw, (max-width: 320px) 50vw, 33.33vw" width="{{model.width}}" height="{{model.height}}" />
 {{#if model.date}}
     <span class="date">{{formatDate model.date labels.dateFormat}}</span>
 {{/if}}
