--- a/app/css/main.css
+++ b/app/css/main.css
@@ -196,33 +196,48 @@ main {
 
 .grid {
     display: flex;
+    width: 100%;
+}
+
+.grid.line {
     flex-wrap: wrap;
-    /*justify-content: flex-start;*/
     justify-content: space-around;
     margin: 0;
-    width: 100%;
 }
 
 .item {
-    position: relative;
     margin-top: 0.1rem;
-    /*margin-left: 0.3rem;*/
+    position: relative;
 }
 
-/*.item img {
-    width: auto;
-}*/
+.column .item {
+    margin-top: 1%;
+}
 
-.item video, .item iframe {
-    cursor: pointer;
-    position: relative;
+.column {
+    padding-left: 0.6rem;
     width: 100%;
 }
+
+.column:last-child {
+    padding-right: 0.6rem;
+}
+
+.item video, .item iframe, .item img {
+    cursor: pointer;
+    position: relative;
+}
+
+.column .item video, .column .item iframe, .column .item img {
+    width: 100%;
+}
+
 .item img, .item video, .item iframe, .picture img, .picture iframe {
     -moz-box-shadow: 1px 1px 5px #999;
     -webkit-box-shadow: 1px 1px 5px #999;
     box-shadow: 1px 1px 5px #999;
 }
+
 .item img:hover, .item video:hover, .item iframe:hover {
     -moz-box-shadow: 2px 2px 6px #FFFFBC;
     -webkit-box-shadow: 2px 2px 6px #FFFFBC;
@@ -240,6 +255,7 @@ main {
     visibility: hidden;
     width: 100%;
 }
+
 .item:hover .date, .item:hover .description, .item:hover .nb-comments {
     visibility: visible;
 }
