--- a/app/templates/video.hbs
+++ b/app/templates/video.hbs
@@ -1,4 +1,4 @@
-<div class="click-overlay" style="width:{{width}}px;height:{{height}}px;"></div>
+<div class="click-overlay" style="width:{{model.width}}px;height:{{model.height}}px;"></div>
 {{#if dailymotion}}
     <iframe src="//www.dailymotion.com/embed/video/{{videoId}}?html=1&info=0&logo=0&related=0&chromeless=1"
 {{else if youtube}}
@@ -8,8 +8,8 @@
 {{else}}
     <iframe src="/pictures/empty.jpg"
 {{/if}}
-        width="{{width}}"
-        height="{{height}}"
+        width="{{model.width}}"
+        height="{{model.height}}"
         frameborder="0"
         webkitallowfullscreen mozallowfullscreen allowfullscreen>
     </iframe>
