--- a/app/css/main.css
+++ b/app/css/main.css
@@ -32,6 +32,7 @@ body {
     background-color: #f9f9f9;
     font-family: 'SansationRegular', sans-serif;
     margin: 0;
+    overflow-x: hidden;
     overflow-y: scroll;
     padding: 0;
 }
