Fix #44: first posted picture is now displayed even if line is not complete

--- a/app/templates/picture.hbs
+++ b/app/templates/picture.hbs
@@ -1,5 +1,5 @@
 <img src="/pictures/{{model.filename}}--640.{{model.extension}}"
-     alt="{{model.filename}}" id="{{model.id}}" class="wall"
+     alt="{{model.filename}}" class="wall"
      srcset="/pictures/{{model.filename}}--320.{{model.extension}} 320w,
              /pictures/{{model.filename}}--640.{{model.extension}} 640w,
              /pictures/{{model.filename}}--1024.{{model.extension}} 1024w,
