--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -1,4 +1,5 @@
 <div class="side front">
+    <div class="menu"><i class="icon-menu"></i></div>
     <a href="/" class="brand">
         <img src="/img/logo_m.png" alt="Logo" /> {{title}}
     </a>
