--- a/app/css/main.css
+++ b/app/css/main.css
@@ -85,6 +85,7 @@ nav {
     height: 100vh;
     left: -15rem;
     min-width: 10rem;
+    max-width: 14rem;
     position: fixed;
     top: 2.2rem;
     transition: transform 0.25s ease;
