--- a/app/templates/menu.hbs
+++ b/app/templates/menu.hbs
@@ -1,13 +1,4 @@
-<div class="filter-selection">
-    <div class="column year">
-        {{#each years}}
-            <span class="alone{{#ifequals ../year this}} selected{{/ifequals}}">{{this}}</span>
-        {{/each}}
-    </div>
-    <div class="column month{{#unless year}} hidden{{/unless}}">
-        {{#each months}}
-            <span data-value="{{this.id}}"{{#ifequals ../month this.value}} class="selected"{{/ifequals}}>{{this.value}}</span>
-        {{/each}}
-    </div>
+<div class="filter-menu">
+    <h3>Filtre :</h3>
+    <div class="filter-content"></div>
 </div>
-<button class="filter-selection-button btn">{{labels.validate}}</button>
