--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -11,7 +11,7 @@
     {{#if dailymotion}}
         <iframe src="//www.dailymotion.com/embed/video/{{videoId}}?html=1&info=0&logo=0&related=0&autoplay=1"
     {{else if youtube}}
-        <iframe id="ytplayer" type="text/html" src="http://www.youtube.com/embed/{{videoId}}?autoplay=1&showinfo=0&playsinline=1&fs=0&rel=0&theme=light"
+        <iframe id="ytplayer" type="text/html" src="//www.youtube.com/embed/{{videoId}}?autoplay=1&showinfo=0&playsinline=1&fs=0&rel=0&theme=light"
     {{else if vimeo}}
         <iframe src="//player.vimeo.com/video/{{videoId}}?title=0&autoplay=1&badge=0"
     {{else}}
