--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -19,7 +19,8 @@
     {{/if}}
         width="100%"
         height="100%"
-        frameborder="0">
+        frameborder="0"
+        webkitallowfullscreen mozallowfullscreen allowfullscreen>
     </iframe>
 {{/if}}
 </div>
