--- a/app/templates/item-zoom.hbs
+++ b/app/templates/item-zoom.hbs
@@ -20,7 +20,7 @@
         width="100%"
         height="100%"
         frameborder="0"
-        webkitallowfullscreen mozallowfullscreen allowfullscreen>
+        webkitallowfullscreen="true" mozallowfullscreen="true" allowfullscreen="true">
     </iframe>
 {{/if}}
 </div>
