Fix: minor bugs

--- a/app/templates/upload-video.hbs
+++ b/app/templates/upload-video.hbs
@@ -18,7 +18,7 @@
         </form>
     </section>
     <footer class="control-group">
-        <button id="modalCancel">{{labels.cancel}}</button>
-        <button id="modalSubmit" class="primary">{{labels.uploadVideo}}</button>
+        <button id="modalCancel" class="btn">{{labels.cancel}}</button>
+        <button id="modalSubmit" class="btn primary">{{labels.uploadVideo}}</button>
     </footer>
 </div>
