--- a/app/templates/timeline.hbs
+++ b/app/templates/timeline.hbs
@@ -1,3 +1,3 @@
 {{#each markers}}
-    <span class="marker" style="top: {{this.top}}px">{{this.label}}</span>
+    <span class="marker" style="top:{{this.top}}px;color:{{this.color}};">{{this.label}}</span>
 {{/each}}
