Fix: timeline image cache issue

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -98,7 +98,7 @@ nav.displayed {
 }
 
 aside {
-    background: url(../img/timeline.png) repeat-y;
+    background: url(../img/timeline-white.png) repeat-y;
     bottom: 0;
     min-height: 100vh;
     position: absolute;
