Add: adapt visibility if image is not in viewport

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -270,6 +270,10 @@ main {
     position: relative;
 }
 
+.item > img {
+    transition: 0.2s opacity ease-out;
+}
+
 .column .item {
     margin-top: 1%;
 }
