--- a/app/css/wallblog.css
+++ b/app/css/wallblog.css
@@ -1,10 +1,11 @@
 @font-face {
   font-family: 'wallblog';
-  src: url('../font/wallblog.eot?15331771');
-  src: url('../font/wallblog.eot?15331771#iefix') format('embedded-opentype'),
-       url('../font/wallblog.woff?15331771') format('woff'),
-       url('../font/wallblog.ttf?15331771') format('truetype'),
-       url('../font/wallblog.svg?15331771#wallblog') format('svg');
+  src: url('../font/wallblog.eot?52081513');
+  src: url('../font/wallblog.eot?52081513#iefix') format('embedded-opentype'),
+       url('../font/wallblog.woff2?52081513') format('woff2'),
+       url('../font/wallblog.woff?52081513') format('woff'),
+       url('../font/wallblog.ttf?52081513') format('truetype'),
+       url('../font/wallblog.svg?52081513#wallblog') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'wallblog';
-    src: url('../font/wallblog.svg?15331771#wallblog') format('svg');
+    src: url('../font/wallblog.svg?52081513#wallblog') format('svg');
   }
 }
 */
@@ -61,3 +62,5 @@
 .icon-upload:before { content: '\5e'; } /* '^' */
 .icon-comment:before { content: '\63'; } /* 'c' */
 .icon-clear:before { content: '\78'; } /* 'x' */
+.icon-heart:before { content: '\e800'; } /* '' */
+.icon-heart-empty:before { content: '\e801'; } /* '' */
